# juro

./: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  render.yaml  requirements.md  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_water_fields.py
app/: config.py  database.py  deps.py  main.py
app/api/: router.py
app/api/v1/: allergy.py  auth.py  menu.py  nutrition.py  report.py  settings.py
app/core/: __init__.py  exceptions.py  security.py
app/models/: __init__.py  allergy.py  base.py  consent_log.py  doctor.py  food.py  menu.py  menu_history.py  nutrition_log.py  user.py
app/repositories/: user.py
app/schemas/: allergy.py  menu.py  nutrition.py  report.py  signal.py  user.py
app/services/: correction.py  csp_engine.py  nutrition_calc.py  recipe_scraper.py  report_gen.py  signal.py
juro_app/: README.md  pubspec.yaml
juro_app/android/app/: build.gradle.kts
juro_app/assets/data/: allergen_presets.json
juro_app/ios/Runner/: Info.plist
juro_app/ios/Runner.xcodeproj/: project.pbxproj
juro_app/lib/: app.dart  main.dart
juro_app/lib/core/api/: api_client.dart  (+1 more)
juro_app/test/: widget_test.dart
juro_app/test/cubit/: menu_cubit_test.dart
juro_app/test/integration/: auth_cubit_test.dart  nutrition_cubit_test.dart  report_cubit_test.dart  settings_cubit_test.dart
juro_app/test/widget/: ingredient_card_test.dart
tests/: conftest.py  test_correction.py  test_nutrition_calc.py  test_signal.py
tests/integration/: test_allergy.py  test_auth.py  test_report.py  test_settings.py
(+43 files in other folders)
